# chromium-autobuilder

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: chromium-release.yml  chromium-update.yml
artifacts/latest/: build.json
builder/: builder.rs  logger.rs  scheduler.rs  state.rs
server/: api.rs  dashboard.rs  download.rs  main.rs  os_detect.rs  routes.rs  websocket.rs
web/: dashboard.html  dashboard.js  style.css
worker/: Cargo.toml  build.rs  main.rs  state.rs  worker.rs
