[package]
name = "chromium-autobuilder"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }

axum = { version = "0.7", features = ["ws"] }

tower-http = { version = "0.5", features = ["fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.11", features = ["blocking","json"] }

chrono = "0.4"

futures = "0.3"

tokio-stream = "0.1"